--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@next/mdx": "^14.2.3",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tabler/icons-react": "^3.5.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
